style.css
.ttt-btn {
  width: 100px;
  height: 100px;
  background-size: contain;
}

.rows {
  padding: 2px;
}

#game {
  position: fixed;
  top: 60%;
  left: 50%;
  transform: translate(-50%, -50%);
}

body {
  cursor: url('images/smashBro\ \(11\).png'), auto;
  background: rgb(2,0,36);
  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(89,89,130,1) 35%, rgba(0,212,255,1) 100%);
}

#who-won {
  font-size: 40px;
  font-family: "Comic Sans MS", "Comic Sans", cursive;
  background-color: rgba(16, 3, 46, 0);
  color: rgb(255, 203, 89);
}

#avatar-container {
  width: 500px;
  height: auto;
  border: 2px solid black;
  background-color: black;
}

.all-smash-bro-icons {
  width: 30px;
  height: 30px;
}

.all-smash-bro-icons:hover {
  transform: scale(1.5);
  cursor: pointer;
}

.win-icon {
  width: 60px;
  height: 60px;
  animation: spin 2s linear infinite;
}
@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }

